created welcome page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UnionSend</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="center-y">
+            <div>
+                <!-- empty div do not remove it  -->
+            </div>
+            <img src="img/logo.png" class="img-fluid" alt="">
+            <div>
+                <div id="welecome-slider" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <h4>Welcome to UnionSend</h4>
+                        <p>The faster & secure way of sending money globally</p>
+                      </div>
+                      <div class="carousel-item">
+                        <h4>Welcome to UnionSend</h4>
+                        <p>The faster & secure way of sending money globally</p>
+                      </div>
+                      <div class="carousel-item">
+                        <h4>Welcome to UnionSend</h4>
+                        <p>The faster & secure way of sending money globally</p>
+                      </div>
+                    </div>
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#welecome-slider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#welecome-slider" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#welecome-slider" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      </div>
+                </div>
+                <div class="login-btns">
+                    <a href="">Log In</a>
+                    <a href="">Sign Up</a>
+                </div>
+                <a href="" class="check-rate-btn">Check Rates</a>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
