--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="login-btns">
                     <a href="">Log In</a>
-                    <a href="">Sign Up</a>
+                    <a href="signup.html">Sign Up</a>
                 </div>
                 <a href="" class="check-rate-btn">Check Rates</a>
             </div>
