--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
                 <img src="img/logo.png" class="img-fluid logo" alt="">
                 <div class="step-counters">
                     <div class="step-counter" style="visibility: hidden;"></div>
-                    <div class="step-counter">
+                    <div class="step-counter" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:14.2">
                         <span class="current-step">1</span> <span>/7</span>
                     </div>
                     <div class="step-counter">
@@ -31,7 +31,7 @@
                 </div>
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
-                    <h4>Create your UnionSend account</h4>
+                    <h5>Create your UnionSend account</h5>
                     <p>Sign up for free. <br> No Bank account or credit card needed.</p>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             </form>
         </div>
         <div class="container mt-auto pb-4">
-            <button class="cont-btn">Continue</button>
+            <a href="signup-step2.html" class="cont-btn">Continue</a>
         </div>
     </div>
     
