--- a/signup-step2.html
+++ b/signup-step2.html
@@ -37,7 +37,7 @@
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
                     <h5>Create your login details</h5>
-                    <p>Chose a safe password. Your phone number will be verified in the next step</p>
+                    <p>Choose a safe password. Your phone number will be verified in the next step</p>
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
@@ -89,7 +89,7 @@
             </form>
         </div>
         <div class="container mt-auto pb-4">
-            <a href="signup-step2.html" class="cont-btn">Continue</a>
+            <a href="signup-step3.html" class="cont-btn">Continue</a>
         </div>
     </div>
 
