added step 3_2 of signup page

--- a/signup-step3-2.html
+++ b/signup-step3-2.html
@@ -37,7 +37,7 @@
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
                     <h5>Verify your phone number</h5>
-                    <p>Please enter the code sent to the number ending in 4225</p>
+                    <p>Well done, you can now proceed to the next step.</p>
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
@@ -49,17 +49,12 @@
                 </svg>
             </div>
         </div>
-        <div class="container">
-            <form action="" class="mt-5">
-                <div class="mb-3">
-                    <input type="number" pattern="/d*" placeholder="Enter Code" class="custom-input">
-                </div>
-                
-            </form>
+        <div class="container text-center">
+            <img src="img/folder.png" class="img-fluid w-25 mt-5" alt="">
         </div>
         
         <div class="container mt-auto pb-4">
-            <a href="signup-step3-2.html" class="cont-btn">Continue</a>
+            <a href="signup-step3.html" class="cont-btn">Continue</a>
         </div>
     </div>
 
