--- a/signup-step4.html
+++ b/signup-step4.html
@@ -24,14 +24,14 @@
                 <img src="img/logo.png" class="img-fluid logo" alt="">
                 <div class="step-counters">
                     <div class="step-counter">
-                        <span>2</span>
+                        <span>3</span>
                     </div>
                     <div class="step-counter" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                        aria-valuemax="100" style="--value:42.6">
-                        <span class="current-step">3</span> <span>/7</span>
+                        aria-valuemax="100" style="--value:56.8">
+                        <span class="current-step">4</span> <span>/7</span>
                     </div>
                     <div class="step-counter">
-                        <span>4</span>
+                        <span>5</span>
                     </div>
                 </div>
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
@@ -52,19 +52,25 @@
         <div class="container">
             <form action="" class="mt-5">
                 <div class="mb-3">
-                    <input type="number" pattern="/d*" placeholder="Enter Code" class="custom-input">
+                    <input type="text"  placeholder="First Name" class="custom-input">
+                </div>
+                <div class="mb-3">
+                    <input type="text" placeholder="Last Name" class="custom-input">
+                </div>
+                <div class="mb-3">
+                    <input type="text" placeholder="Date of Birth" class="custom-input">
                 </div>
                 
             </form>
         </div>
         
         <div class="container mt-auto pb-4">
-            <a href="signup-step3-2.html" class="cont-btn">Verify</a>
+            <a href="signup-step3-2.html" class="cont-btn">Continue</a>
         </div>
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
-
+   
 
 </body>
 
