fixed text issue and reduced padding from wave bg

--- a/signup-step4.html
+++ b/signup-step4.html
@@ -36,8 +36,8 @@
                 </div>
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
-                    <h5>Verify your phone number</h5>
-                    <p>Please enter the code sent to the number ending in 4225</p>
+                    <h5>Enter your personal details</h5>
+                    <p>Tell us about yourself</p>
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="container">
-            <form action="" class="mt-5">
+            <form action="" class="mt-3">
                 <div class="mb-3">
                     <input type="text"  placeholder="First Name" class="custom-input">
                 </div>
@@ -65,7 +65,7 @@
         </div>
         
         <div class="container mt-auto pb-4">
-            <a href="signup-step3-2.html" class="cont-btn">Continue</a>
+            <a href="" class="cont-btn">Continue</a>
         </div>
     </div>
 
