--- a/signup-step5.html
+++ b/signup-step5.html
@@ -24,20 +24,20 @@
                 <img src="img/logo.png" class="img-fluid logo" alt="">
                 <div class="step-counters">
                     <div class="step-counter">
-                        <span>3</span>
+                        <span>4</span>
                     </div>
                     <div class="step-counter" role="progressbar" aria-valuenow="65" aria-valuemin="0"
                         aria-valuemax="100" style="--value:56.8">
-                        <span class="current-step">4</span> <span>/7</span>
+                        <span class="current-step">5</span> <span>/7</span>
                     </div>
                     <div class="step-counter">
-                        <span>5</span>
+                        <span>6</span>
                     </div>
                 </div>
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
-                    <h5>Enter your personal details</h5>
-                    <p>Tell us about yourself</p>
+                    <h5>Identity verification</h5>
+                    <p>Help us verify your account by providing one of the following </p>
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
@@ -49,23 +49,12 @@
                 </svg>
             </div>
         </div>
-        <div class="container">
-            <form action="" class="mt-3">
-                <div class="mb-3">
-                    <input type="text"  placeholder="First Name" class="custom-input">
-                </div>
-                <div class="mb-3">
-                    <input type="text" placeholder="Last Name" class="custom-input">
-                </div>
-                <div class="mb-3">
-                    <input type="text" placeholder="Date of Birth" class="custom-input">
-                </div>
-                
-            </form>
+        <div class="container text-center">
+            <img src="img/verification.png" class="img-fluid w-25 py-4" alt="">
         </div>
         
         <div class="container mt-auto pb-4">
-            <a href="signup-step5.html" class="cont-btn">Continue</a>
+            <a href="" class="cont-btn">BVN</a>
         </div>
     </div>
 
