added step 5-2 of signup page

--- a/signup-step5-2.html
+++ b/signup-step5-2.html
@@ -36,8 +36,9 @@
                 </div>
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
-                    <h5>Identity verification</h5>
-                    <p>Help us verify your account by providing one of the following </p>
+                    <h5>Enter your BVN </h5>
+                    <p>We do this to ensure your account belongs to you.</p>
+                    <small>You can tap here to securely get your BVN from your network provider or dail *565*0#</small>
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
@@ -50,11 +51,16 @@
             </div>
         </div>
         <div class="container text-center">
-            <img src="img/verification.png" class="img-fluid w-25 py-4" alt="">
+            
+            <form action="" class="mt-4">
+                <div class="mb-3">
+                    <input type="number" pattern="/d*" placeholder="BVN (11 Digits)" class="custom-input">
+                </div>
+            </form>
         </div>
         
         <div class="container mt-auto pb-4">
-            <a href="signup-step5-2.html" class="cont-btn">BVN</a>
+            <a href="" class="cont-btn">Next</a>
         </div>
     </div>
 
