added step 6 of signup page

--- a/signup-step6.html
+++ b/signup-step6.html
@@ -14,7 +14,7 @@
 <body>
     <div class="min-vh-100 d-flex flex-column">
         <div class="header">
-            <a href="signup-step4.html" class="back-btn">
+            <a href="signup-step5.html" class="back-btn">
                 <i class="bi bi-chevron-left"></i> Back
             </a>
             <div class="page-name">SignUp</div>
@@ -24,21 +24,20 @@
                 <img src="img/logo.png" class="img-fluid logo" alt="">
                 <div class="step-counters">
                     <div class="step-counter">
-                        <span>4</span>
+                        <span>5</span>
                     </div>
                     <div class="step-counter" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                        aria-valuemax="100" style="--value:71">
-                        <span class="current-step">5</span> <span>/7</span>
+                        aria-valuemax="100" style="--value:85.2">
+                        <span class="current-step">6</span> <span>/7</span>
                     </div>
                     <div class="step-counter">
-                        <span>6</span>
+                        <span>7</span>
                     </div>
                 </div>
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
-                    <h5>Enter your BVN </h5>
-                    <p>We do this to ensure your account belongs to you.</p>
-                    <small>You can tap here to securely get your BVN from your network provider or dail *565*0#</small>
+                    <h5>Congratulations</h5>
+                    <p>Your account is read</p>
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
@@ -51,16 +50,12 @@
             </div>
         </div>
         <div class="container text-center">
+            <img src="img/cracker.png" class="w-50 py-3" alt="">
             
-            <form action="" class="mt-4">
-                <div class="mb-3">
-                    <input type="number" pattern="/d*" placeholder="BVN (11 Digits)" class="custom-input">
-                </div>
-            </form>
         </div>
         
         <div class="container mt-auto pb-4">
-            <a href="signup-step6.html" class="cont-btn">Next</a>
+            <a href="" class="cont-btn">Next</a>
         </div>
     </div>
 
