--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                       </div>
                 </div>
                 <div class="login-btns">
-                    <a href="">Log In</a>
+                    <a href="login.html">Log In</a>
                     <a href="signup.html">Sign Up</a>
                 </div>
                 <a href="" class="check-rate-btn">Check Rates</a>
