added a home page

--- a/login.html
+++ b/login.html
@@ -14,10 +14,10 @@
 <body>
     <div class="min-vh-100 d-flex flex-column">
         <div class="header">
-            <a href="signup.html" class="back-btn">
+            <a href="index.html" class="back-btn">
                 <i class="bi bi-chevron-left"></i> Back
             </a>
-            <div class="page-name">SignUp</div>
+            <div class="page-name">Log In</div>
         </div>
         <div class="container wave-bg">
             <div class=" pb-4 position-relative">
@@ -47,7 +47,7 @@
             </form>
         </div>
         <div class="container mt-auto pb-4">
-            <a href="signup-step3.html" class="cont-btn">Get OTP</a>
+            <a href="home.html" class="cont-btn">Login</a>
         </div>
     </div>
 
