change step 6 a new page

--- a/signup-step5.html
+++ b/signup-step5.html
@@ -38,7 +38,7 @@
                 <div class="text-center mt-4">
                     <h5>Identity verification</h5>
                     <p>Help us verify your account by providing one of the following </p>
-                    <a href="" class="skip-btn">Skip</a>
+                    <a href="signup-step6.html" class="skip-btn">Skip</a>
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
