--- a/signup-step6.html
+++ b/signup-step6.html
@@ -36,8 +36,10 @@
                 </div>
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
-                    <h5>Congratulations</h5>
-                    <p>Your account is read</p>
+                    <h5>Choose a username</h5>
+                    <p>A username is your unique name for reciving cash on UnionSend </p>
+                    <!-- <h5>Congratulations</h5>
+                    <p>Your account is read</p> -->
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
@@ -50,8 +52,11 @@
             </div>
         </div>
         <div class="container text-center">
-            <img src="img/cracker.png" class="w-50 py-3" alt="">
-            
+            <form action="" class="mt-3">
+                <div class="mb-3">
+                    <input type="text"  placeholder="Enter username" class="custom-input">
+                </div>
+            </form>
         </div>
         
         <div class="container mt-auto pb-4">
