added a step 7 of signup page

--- a/signup-step7.html
+++ b/signup-step7.html
@@ -24,22 +24,20 @@
                 <img src="img/logo.png" class="img-fluid logo" alt="">
                 <div class="step-counters">
                     <div class="step-counter">
-                        <span>5</span>
+                        <span>6</span>
                     </div>
                     <div class="step-counter" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                        aria-valuemax="100" style="--value:85.2">
-                        <span class="current-step">6</span> <span>/7</span>
+                        aria-valuemax="100" style="--value:100">
+                        <span class="current-step">7</span> <span>/7</span>
                     </div>
-                    <div class="step-counter">
+                    <div class="step-counter" style="visibility: hidden;">
                         <span>7</span>
                     </div>
                 </div>
                 <i class="bi bi-chevron-right counter-right-arrow"></i>
                 <div class="text-center mt-4">
-                    <h5>Choose a username</h5>
-                    <p>A username is your unique name for reciving cash on UnionSend </p>
-                    <!-- <h5>Congratulations</h5>
-                    <p>Your account is read</p> -->
+                    <h5>Congratulations</h5>
+                    <p>Your account is read</p>
                 </div>
             </div>
             <div class="custom-shape-divider-bottom-1650966956">
@@ -52,15 +50,11 @@
             </div>
         </div>
         <div class="container text-center">
-            <form action="" class="mt-3">
-                <div class="mb-3">
-                    <input type="text"  placeholder="Enter username" class="custom-input">
-                </div>
-            </form>
+            <img src="img/cracker.png" class="w-50 py-3" alt="">
         </div>
         
         <div class="container mt-auto pb-4">
-            <a href="signup-step7.html" class="cont-btn">Continue</a>
+            <a href="" class="cont-btn">Done</a>
         </div>
     </div>
 
