adding more options to home page

--- a/home.html
+++ b/home.html
@@ -23,8 +23,10 @@
     </div>
     <div class="container wave-bg">
         <div class="d-flex justify-content-between pt-3">
-            <span>Account(s)</span>
-            <span><i class="bi bi-arrow-left"></i> Swipe</span>
+            <!-- <div class="user-profile">
+                <img src="img/logo.png" alt="">
+            </div> -->
+            <!-- <span><i class="bi bi-arrow-left"></i> Swipe</span> -->
         </div>
         <div class="account-card my-3">
             <div class="d-flex justify-content-between">
@@ -33,18 +35,18 @@
                     <span class="amount">₦0.00</span>
                 </div>
                 <div class="text-end">
-                    <small>Status</small>
-                    <span class="status">Active</span>
+                    <small>UnionSend Level</small>
+                    <span class="status">JJC</span>
                 </div>
             </div>
             <div class="d-flex justify-content-between mt-3">
                 <div>
-                    <small>Account Number</small> 
-                    <span class="account-number">0123456789</span>
+                    <small>Username</small>
+                    <span class="user-name">Isibor</span>
                 </div>
                 <div class="text-end">
-                    <small>Type</small>
-                    <span class="type">Saving Account</span>
+                    <!-- <small>Type</small>
+                    <span class="type">Saving Account</span> -->
                 </div>
             </div>
             <div class="card-btns mt-4">
@@ -53,14 +55,193 @@
             </div>
         </div>
         <div class="custom-shape-divider-bottom-1650966956">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
             </svg>
         </div>
     </div>
-    <div class="footer">
-        
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-4">
+                <a href="" class="boxes">
+                    <i class="bi bi-wallet2"></i>
+                </a>
+                <span>Payments</span>
+            </div>
+            <div class="col-4">
+                <a href="" class="boxes">
+                    <i class="bi bi-bag"></i>
+                </a>
+                <span>Shop Online</span>
+            </div>
+            <div class="col-4">
+                <a href="" class="boxes">
+                    <i class="bi bi-credit-card-2-front"></i>
+                </a>
+                <span>Card</span>
+            </div>
+        </div>
+        <hr>
+        <div class="row ">
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/online-order.png" alt="">
+                </a>
+                <small>orders</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/delivery.png" alt="">
+                </a>
+                <small>Delivery</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/return.png" alt="">
+                </a>
+                <small>return</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/google-analytics.png" alt="">
+                </a>
+                <small>spending overview</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/luxury.png" alt="">
+                </a>
+                <small>luxury</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/bank.png" alt="">
+                </a>
+                <small>bank</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/deal.png" alt="">
+                </a>
+                <small>deal</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/save-instagram.png" alt="">
+                </a>
+                <small>saved</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/store.png" alt="">
+                </a>
+                <small>my stores</small>
+            </div>
+            <div class="circles_parent">
+                <a id="more" class="circles" data-bs-toggle="collapse" data-bs-target="#more-content">
+                    <i class="bi bi-chevron-down"></i>
+                </a>
+                <small>more</small>
+            </div>
+        </div>
+        <div class="row my-4 collapse" id="more-content">
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/credit.png" alt="">
+                </a>
+                <small>one-time cards</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/history.png" alt="">
+                </a>
+                <small>Browsing hisory</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/zero-emission.png" alt="">
+                </a>
+                <small>CO<sub>2</sub> emission</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/bell.png" alt="">
+                </a>
+                <small>Notification</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/add-friend.png" alt="">
+                </a>
+                <small>Invite friend</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/subscription-model.png" alt="">
+                </a>
+                <small>Automatic payment</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/technical-support.png" alt="">
+                </a>
+                <small>customer service</small>
+            </div>
+            <div class="circles_parent">
+                <a href="" class="circles">
+                    <img src="img/settings.png" alt="">
+                </a>
+                <small>settings</small>
+            </div>
+
+        </div>
+        <div class="banner-area mt-4">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/banner.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/banner.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/banner.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="footer">
+
+    </div>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script>
+        // const moreBtn = document.querySelector("#more")
+        // const moreContent = document.querySelector("#more-content")
+
+        // moreBtn.addEventListener("click",()=>{
+        //     if (moreContent.style.maxHeight != "500px") {
+        //         moreContent.style.maxHeight = "500px"
+        //     }
+        //     else{
+        //         moreContent.style.maxHeight = "0px"
+
+        //     }
+        // })
+    </script>
 </body>
 
 </html>
