--- a/home.html
+++ b/home.html
@@ -66,10 +66,10 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-4">
-                <a href="" class="boxes">
+                <a href="send-money.html" class="boxes">
                     <i class="bi bi-wallet2"></i>
                 </a>
-                <span>Payments</span>
+                <span>Send Money</span>
             </div>
             <div class="col-4">
                 <a href="" class="boxes">
