add union transfer page and added footer

--- a/send-money.html
+++ b/send-money.html
@@ -46,7 +46,7 @@
     <div class="container mt-3">
         <h6>How will your receiver get it?</h6>
         <div class="d-flex flex-wrap justify-content-between">
-            <div class="send-boxes">
+            <a href="union-transfer.html" class="send-boxes">
                 <div class="row">
                     <div class="col-3 pe-0 d-flex align-items-center justify-content-center">
                         <img src="img/wallet.png" class="img-fluid" alt="">
@@ -56,7 +56,7 @@
                         <p class="mb-0">Money</p>
                     </div>
                 </div>
-            </div>
+            </a>
             <div class="send-boxes">
                 <div class="row">
                     <div class="col-3 pe-0 d-flex align-items-center justify-content-center">
@@ -90,11 +90,35 @@
                 </div>
             </div>
         </div>
-        <div class="ms-auto col-5 mt-4">
+        <!-- <div class="ms-auto col-5 mt-4">
             <a href="" class="cont-btn">Next</a>
-        </div>
+        </div> -->
         
     </div>
+    <div class="footer-menu ">
+        <a href="#">
+            <i class="bi bi-house-fill"></i> <br>
+            Home
+        </a>
+        <a href="#">
+            <i class="bi bi-clock-history"></i> <br>
+            History
+        </a>
+        <a href="#">
+            <i class="bi bi-wallet-fill"></i> <br>
+            Deposit
+        </a>
+        <a href="#">
+            <i class="bi bi-chat-fill"></i> <br>
+            Live Chat
+        </a>
+        <a href="#">
+            <i class="bi bi-person-fill"></i> <br>
+            Account
+        </a>
+    </div>
+
+
     <script src="js/jquery.js"></script>
     <script src="js/dd-slick.js"></script>
     <script>
