--- a/send-money.html
+++ b/send-money.html
@@ -43,7 +43,7 @@
         <h6>Sending to </h6>
         <div class="state_dropdown"></div>
     </form>
-    <div class="container mt-3">
+    <div class="container mt-3 pb-5">
         <h6>How will your receiver get it?</h6>
         <div class="d-flex flex-wrap justify-content-between">
             <div class="send-boxes">
@@ -82,15 +82,15 @@
             <div class="send-boxes">
                 <div class="row">
                     <div class="col-3 pe-0 d-flex align-items-center justify-content-center">
-                        <img src="img/personal.png" class="img-fluid" alt="">
+                        <img src="img/bill.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-9 d-flex align-items-center">
-                        <h5 class="mb-0">Airtime</h5>
+                        <h5 class="mb-0">Pay Bill</h5>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="ms-auto col-5 mt-4">
+        <div class="ms-auto col-5 pb-5">
             <button class="cont-btn" id="next-btn" disabled >Next</button>
         </div>
     </div>
