added Bank withdraw page

--- a/pay-bill.html
+++ b/pay-bill.html
@@ -43,7 +43,7 @@
     </div>
     <div class="col-md-5 mx-auto mt-4 pb-5">
         <div class="text-center">
-            <h1>Pay Bill</h1>
+            <h5>Pay Bill</h5>
         </div>
         <div class="agent-box p-4">
             <span>Amount</span>
@@ -53,7 +53,7 @@
             </div>
             <div class="mb-3">
                 <div class="d-flex justify-content-between pe-5">
-                    <label for="transfer" class="form-label">Transfer to</label>
+                    <label for="transfer" class="form-label"><span> Transfer to </span></label>
                     <i class="bi bi-upc-scan scan-icon me-5"></i>
                 </div>
                 <input type="email" class="form-control" id="transfer" placeholder="Email/Username">
