--- a/send-money.html
+++ b/send-money.html
@@ -360,6 +360,9 @@
             else if (document.querySelector(".send-boxes.active h5").innerHTML == "Pay Bill") {
                 window.location.href = "https://alpha.techcon.com.pk/unionsend-mobile/pay-bill.html"
             }
+            else if (document.querySelector(".send-boxes.active h5").innerHTML == "Bank") {
+                window.location.href = "https://alpha.techcon.com.pk/unionsend-mobile/withdraw.html"
+            }
         })
         
       </script>
