--- a/withdraw.html
+++ b/withdraw.html
@@ -41,35 +41,30 @@
             </div>
         </div>
     </div>
-    <div class="col-md-5 mx-auto pb-5 pt-4">
+    <div class="col-md-5 mx-auto mt-4 pb-5 px-3">
         <div class="text-center">
-            <h5>Send Money</h5>
-            <p>Send your money on anytime.</p>
+            <h5>Withdraw</h5>
+            <p>You can withdraw by chosing an option</p>
         </div>
-        <div class="agent-box p-4 pb-5">
-            <h6>Personal Details</h6>
-            <hr>
-            <div class="mb-3">
-                <label for="recipient" class="form-label"><span> Recipient </span></label>
-                <input type="email" class="form-control" id="recipient" placeholder="Email/Username">
+        <div class="row">
+            <div class="col-4">
+                <div class="widthraw-box">
+                    <img src="img/businessman.png" class="img-fluid" alt="">
+                    <h6>Agent</h6>
+                </div>
             </div>
-            <span>To Amount</span>
-            <div class="input-group mb-4 mt-1">
-                <span class="input-group-text">₦</span>
-                <input type="text" class="form-control">
+            <div class="col-4">
+                <div class="widthraw-box">
+                    <img src="img/bank.png" class="img-fluid" alt="">
+                    <h6>Bank</h6>
+                </div>
             </div>
-            <div class="d-flex justify-content-between">
-                <p class="mb-0">Total Fees</p>
-                <p class="mb-0">5.00</p>
+            <div class="col-4">
+                <div class="widthraw-box">
+                    <img src="img/credit.png" class="img-fluid" alt="">
+                    <h6>Card</h6>
+                </div>
             </div>
-            <hr>
-            <div class="d-flex justify-content-between">
-                <h6>Total To Pay</h6>
-                <h6>1.000</h6>
-            </div>
-            <hr>
-            <a class="add-msg" data-bs-toggle="modal" data-bs-target="#add_msg">Add Meassage</a>
-            <a href="success.html" class="cont-btn mt-3">Pay Now</a>
         </div>
     </div>
     <div class="footer-menu ">
