--- a/agent.html
+++ b/agent.html
@@ -41,30 +41,29 @@
             </div>
         </div>
     </div>
-    <div class="col-md-5 mx-auto mt-4 pb-5 px-3">
-        <div class="text-center">
-            <h5>Withdraw</h5>
-            <p>You can withdraw by chosing an option</p>
-        </div>
-        <div class="row">
-            <div class="col-4">
-                <a href="agent.html" class="widthraw-box">
-                    <img src="img/businessman.png" class="img-fluid" alt="">
-                    <h6>Agent</h6>
-                </a>
+    <div class="mt-4 pb-5 px-3">
+        <div class="agent-box p-4 pb-5">
+            <div class="text-center text-white theme_bg rounded p-4 mb-4">
+                <h5 class="mb-3 text-white">₦2956.00</h5>
+                <small class="text-white">Availble Balance</small>
+                <button class="cont-btn theme_bg w-auto border rounded-pill py-2 px-4 mx-auto mt-3 d-block">
+                    <small class="text-white"> Withdraw Full Amount </small></button>
             </div>
-            <div class="col-4">
-                <div class="widthraw-box">
-                    <img src="img/bank.png" class="img-fluid" alt="">
-                    <h6>Bank</h6>
-                </div>
+            <span>Amount</span>
+            <div class="input-group mb-3 mt-1">
+                <span class="input-group-text">₦</span>
+                <input type="text" class="form-control">
             </div>
-            <div class="col-4">
-                <div class="widthraw-box">
-                    <img src="img/credit.png" class="img-fluid" alt="">
-                    <h6>Card</h6>
-                </div>
+            <div class="d-flex justify-content-between">
+                <p class="mb-0">Transection fee</p>
+                <p class="mb-0">5.00</p>
             </div>
+            <hr>
+            <div class="d-flex justify-content-between">
+                <h6>Amount to Withdraw</h6>
+                <h6>1.000</h6>
+            </div>
+            <a href="outlet.html" class="cont-btn mt-3">Continue</a>
         </div>
     </div>
     <div class="footer-menu ">
