added succcess2 and add bank page

--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
                 <small>more</small>
             </div>
         </div>
-        <div class="row my-4 collapse" id="more-content">
+        <div class="row mb-4 collapse" id="more-content">
             <div class="circles_parent">
                 <a href="" class="circles">
                     <img src="img/credit.png" alt="">
