--- a/add-bank.html
+++ b/add-bank.html
@@ -42,28 +42,12 @@
         </div>
     </div>
     <div class="mt-4 pb-5 px-3">
-        <div class="agent-box p-4 pb-5">
-            <div class="text-center text-white theme_bg rounded p-4 mb-4">
-                <h5 class="mb-3 text-white">₦2956.00</h5>
-                <small class="text-white">Availble Balance</small>
-                <button class="cont-btn theme_bg w-auto border rounded-pill py-2 px-4 mx-auto mt-3 d-block">
-                    <small class="text-white"> Withdraw Full Amount </small></button>
+        <div class="add-bank text-center p-4">
+            <h1>Withdraw</h1>
+            <div class="my-4">
+                <img src="img/wallet.png" class="img-fluid w-50" alt="">
             </div>
-            <span>Amount</span>
-            <div class="input-group mb-3 mt-1">
-                <span class="input-group-text">₦</span>
-                <input type="text" class="form-control">
-            </div>
-            <div class="d-flex justify-content-between">
-                <p class="mb-0">Transection fee</p>
-                <p class="mb-0">5.00</p>
-            </div>
-            <hr>
-            <div class="d-flex justify-content-between">
-                <h6>Amount to Withdraw</h6>
-                <h6>1.000</h6>
-            </div>
-            <a href="success-2.html" class="cont-btn mt-3">Continue</a>
+            <a href="add-bank-form.html"> Add a Bank Account </a>
         </div>
     </div>
     <div class="footer-menu ">
