--- a/success-2.html
+++ b/success-2.html
@@ -41,29 +41,19 @@
             </div>
         </div>
     </div>
-    <div class="col-md-5 mx-auto mt-4 pb-5 px-3">
-        <div class="text-center">
-            <h5>Withdraw</h5>
-            <p>You can withdraw by chosing an option</p>
-        </div>
-        <div class="row">
-            <div class="col-4">
-                <a href="agent.html" class="widthraw-box">
-                    <img src="img/businessman.png" class="img-fluid" alt="">
-                    <h6>Agent</h6>
-                </a>
-            </div>
-            <div class="col-4">
-                <a href="add-bank.html" class="widthraw-box">
-                    <img src="img/bank.png" class="img-fluid" alt="">
-                    <h6>Bank</h6>
-                </a>
-            </div>
-            <div class="col-4">
-                <div class="widthraw-box">
-                    <img src="img/credit.png" class="img-fluid" alt="">
-                    <h6>Card</h6>
-                </div>
+    <div class="col-md-5 mx-auto pb-5">
+        <div class="agent-box p-4 pb-5">
+            <div class="text-center">
+                <i class="bi bi-check-circle-fill success-icon"></i>
+                <h1 class="theme_color">Success!</h1>
+                <p>Transection Complete</p>
+                <img src="img/barcode.jpg" class="img-fluid" alt="">
+                <p class=" code-digits">154387</p>
+                <p class=""> You have successfully sent <b>₦995.50</b>. See transaction details under <a href="" class="activity-btn">activity</a> </p>
+                <p class="">The cashier can scan this code or enter the 6-digit number to process your withdrawal request</p>
+                <a href="send-money.html" class="cont-btn mb-3">Search Pos Outlet near you</a>
+                <a href="withdraw.html" class="cont-btn mb-3">Withdraw Money Again</a>
+                <a href="#" class="print-btn"><i class="bi bi-printer"></i> Print</a>
             </div>
         </div>
     </div>
@@ -88,29 +78,6 @@
             <i class="bi bi-person-fill"></i> <br>
             Account
         </a>
-    </div>
-
-
-
-    <div class="modal fade" id="add_msg" tabindex="-1" aria-labelledby="add_msgLabel" style="display: none;"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="meassage" class="form-label">Add Meassage</label>
-                        <textarea class="form-control" id="meassage" rows="4"></textarea>
-                    </div>
-                </div>
-                <div class="modal-footer flex-nowrap">
-                    <button type="button" class="close-btn" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="cont-btn">Add Meassage</button>
-                </div>
-            </div>
-        </div>
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
