added a searched page

--- a/search.html
+++ b/search.html
@@ -49,7 +49,7 @@
                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Type your state">
                 </div>
             </div>
-            <a href="search.html" class="cont-btn">Search</a>
+            <a href="searched.html" class="cont-btn">Search</a>
         </div>
     </div>
     <div class="footer-menu ">
