added a withdraw bank page

--- a/add-bank-form.html
+++ b/add-bank-form.html
@@ -89,7 +89,7 @@
                     
                     
                 </div>
-                <a href="#" class="cont-btn mt-3">Add Bank Account</a>
+                <a href="withdraw-bank.html" class="cont-btn mt-3">Add Bank Account</a>
             </form>
         </div>
     </div>
