--- a/confirm-withdraw.html
+++ b/confirm-withdraw.html
@@ -41,29 +41,37 @@
             </div>
         </div>
     </div>
-    <div class="mt-4 pb-5 px-3">
+    <div class=" mt-5 pb-5">
         <div class="agent-box p-4 pb-5">
-            <div class="text-center text-white theme_bg rounded p-4 mb-4">
-                <h5 class="mb-3 text-white">₦2956.00</h5>
-                <small class="text-white">Availble Balance</small>
-                <button class="cont-btn theme_bg w-auto border rounded-pill py-2 px-4 mx-auto mt-3 d-block">
-                    <small class="text-white"> Withdraw Full Amount </small></button>
-            </div>
-            <span>Amount</span>
-            <div class="input-group mb-3 mt-1">
-                <span class="input-group-text">₦</span>
-                <input type="text" class="form-control">
+            <h5 class="text-center">Confirm Withdrawal</h5>
+            <div class="text-center my-4">
+                <i class="bi bi-upload"></i>
             </div>
             <div class="d-flex justify-content-between">
-                <p class="mb-0">Transection fee</p>
-                <p class="mb-0">5.00</p>
+                <span>Bank Name</span>
+                <span>Access Bank Plc</span>
             </div>
             <hr>
             <div class="d-flex justify-content-between">
-                <h6>Amount to Withdraw</h6>
-                <h6>1.000</h6>
+                <span>Name</span>
+                <span>Jon doe</span>
             </div>
-            <a href="confirm-withdraw.html" class="cont-btn mt-3">Continue</a>
+            <hr>
+            <div class="d-flex justify-content-between">
+                <span>Account Number</span>
+                <span>123457388374</span>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-between">
+                <span>Amount</span>
+                <span>295</span>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-between">
+                <span>Fee</span>
+                <span>25</span>
+            </div>
+            <a href="success2.html" class="cont-btn mt-3">Confirm</a>
         </div>
     </div>
     <div class="footer-menu ">
@@ -89,28 +97,6 @@
         </a>
     </div>
 
-
-
-    <div class="modal fade" id="add_msg" tabindex="-1" aria-labelledby="add_msgLabel" style="display: none;"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="meassage" class="form-label">Add Meassage</label>
-                        <textarea class="form-control" id="meassage" rows="4"></textarea>
-                    </div>
-                </div>
-                <div class="modal-footer flex-nowrap">
-                    <button type="button" class="close-btn" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="cont-btn">Add Meassage</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
 
