change the link of agent page

--- a/withdraw.html
+++ b/withdraw.html
@@ -47,12 +47,12 @@
             <p>You can withdraw by chosing an option</p>
         </div>
         <div class="row">
-            <div class="col-4">
+            <!-- <div class="col-4">
                 <a href="agent.html" class="widthraw-box">
                     <img src="img/businessman.png" class="img-fluid" alt="">
                     <h6>Agent</h6>
                 </a>
-            </div>
+            </div> -->
             <div class="col-4">
                 <a href="add-bank.html" class="widthraw-box">
                     <img src="img/bank.png" class="img-fluid" alt="">
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="footer-menu ">
-        <a href="#">
+        <a href="home.html">
             <i class="bi bi-house-fill"></i> <br>
             Home
         </a>
