--- a/add-bank-form.html
+++ b/add-bank-form.html
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="footer-menu ">
-        <a href="#">
+        <a href="home.html">
             <i class="bi bi-house-fill"></i> <br>
             Home
         </a>
