--- a/confirm-withdraw.html
+++ b/confirm-withdraw.html
@@ -71,11 +71,11 @@
                 <span>Fee</span>
                 <span>25</span>
             </div>
-            <a href="success2.html" class="cont-btn mt-3">Confirm</a>
+            <a href="success-withdraw.html" class="cont-btn mt-3">Confirm</a>
         </div>
     </div>
     <div class="footer-menu ">
-        <a href="#">
+        <a href="home.html">
             <i class="bi bi-house-fill"></i> <br>
             Home
         </a>
