--- a/send-money.html
+++ b/send-money.html
@@ -95,7 +95,7 @@
         </div>
     </div>
     <div class="footer-menu">
-        <a href="#">
+        <a href="home.html">
             <i class="bi bi-house-fill"></i> <br>
             Home
         </a>
@@ -362,6 +362,9 @@
             }
             else if (document.querySelector(".send-boxes.active h5").innerHTML == "Bank") {
                 window.location.href = "https://alpha.techcon.com.pk/unionsend-mobile/withdraw.html"
+            }
+            else if (document.querySelector(".send-boxes.active h5").innerHTML == "Cash") {
+                window.location.href = "https://alpha.techcon.com.pk/unionsend-mobile/agent.html"
             }
         })
         
